--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^0.20.0",
     "base64url": "^3.0.1",
     "cryptr": "^6.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "json-rules-engine": "^5.0.3",
+    "json-rules-engine": "^5.0.4",
     "jsonwebtoken": "^8.5.1",
-    "moment": "2.24.0",
+    "moment": "^2.29.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "pg": "^8.2.1",
+    "pg": "^8.4.0",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.10",
-    "sequelize-cli": "^5.5.1",
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
     "simple-node-logger": "^18.12.24"
   },
   "devDependencies": {},
