--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dhanda-app",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "dependencies": {
     "axios": "^0.20.0",
     "base64url": "^3.0.1",
@@ -23,7 +23,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
