--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "aws-sdk": "^2.769.0",
     "axios": "^0.20.0",
     "base64url": "^3.0.1",
     "cryptr": "^6.0.2",
