in sandbox mode send otp email to default email address

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
 # Environment Variables
-ENV=dev
+NODE_ENV=development
 PORT=7000
 API_VERSION=v1
 OTP_SANDBOX=true
 CRYPTR_KEY=
 APP_HASH=
+EMAIL_SANDBOX=true
+AWS_REGION=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_SECRET_KEY=
