--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,4 @@
 # Environment Variables
-NODE_ENV=development
+ENV=dev
 PORT=7000
-LOG_REQ_RES=true
 API_VERSION=v1
-OTP_SANDBOX=true
-CRYPTR_KEY=
-APP_HASH=
-EMAIL_SANDBOX=true
-AWS_REGION=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_SECRET_KEY=
-JWT_SECRET
