--- a/config/thirdPartyConfig.json.example
+++ b/config/thirdPartyConfig.json.example
@@ -10,6 +10,7 @@
                 "queueUrl": "",
                 "queueArn": ""
             }
-        }
+        },
+        "queueMaxTries": 5
     }
 }
