--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.1",
     "morgan-body": "^2.5.2",
     "node-cron": "^2.0.3",
+    "node-rules": "^5.2.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.4.0",
