--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ node_modules/
 config/config.json
 config/awsconfig.json
 config/zohoconfig.json
+config/thirdPartyConfig.json
 scratches/
 
 .DS_Store
