added aws sdk and s3 bucket config

--- a/config/thirdPartyConfig.json.example
+++ b/config/thirdPartyConfig.json.example
@@ -11,6 +11,10 @@
                 "queueArn": ""
             }
         },
-        "queueMaxTries": 5
+        "queueMaxTries": 5,
+        "s3": {
+            "attendancePdfBucket": "",
+            "payslipBucket": ""
+        }
     }
 }
