--- a/config/thirdPartyConfig.json.example
+++ b/config/thirdPartyConfig.json.example
@@ -13,6 +13,7 @@
         },
         "queueMaxTries": 5,
         "s3": {
+            "privateBucket": "",
             "attendancePdfBucket": "",
             "payslipBucket": ""
         }
