--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "cryptr": "^6.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "json-rules-engine": "^5.0.4",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "morgan-body": "^2.5.2",
     "node-cron": "^2.0.3",
     "node-rules": "^5.2.0",
+    "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.4.0",
     "pg-hstore": "^2.3.3",
+    "puppeteer": "^5.5.0",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
     "simple-node-logger": "^18.12.24",
