--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "passport-jwt": "^4.0.0",
     "pg": "^8.4.0",
     "pg-hstore": "^2.3.3",
+    "puppeteer": "^5.5.0",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
     "simple-node-logger": "^18.12.24",
