--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cryptr": "^6.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "html-pdf": "^2.2.0",
     "json-rules-engine": "^5.0.4",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
@@ -20,7 +21,6 @@
     "passport-jwt": "^4.0.0",
     "pg": "^8.4.0",
     "pg-hstore": "^2.3.3",
-    "puppeteer": "^5.5.0",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
     "simple-node-logger": "^18.12.24",
