--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan-body": "^2.5.2",
     "node-cron": "^2.0.3",
     "node-rules": "^5.2.0",
+    "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.4.0",
@@ -29,7 +30,9 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start-node": "node app.js",
+    "migrations": "npx sequelize db:migrate",
+    "start": "npx nodemon app.js"
   },
   "repository": {
     "type": "git",
